# CSharp-A-Tree

a-tree-master/: .editorconfig  .gitignore  README.md  a-tree-master.sln  codecov.yml
a-tree-master/.github/workflows/: check.yml
a-tree-master/ATree.Tests/: ATree.Tests.csproj  ATreeTests.cs  AdvancedMatchingTests.cs  AstTests.cs  EvaluationResultTests.cs  EventsTests.cs  PredicatesTests.cs  StringTableTests.cs
a-tree-master/CSharpVersion/: ATree.cs  Ast.cs  CSharpVersion.csproj  CSharpVersion.sln  Error.cs  EvaluationResult.cs  Events.cs  ListExtensions.cs  PredicateFactory.cs  Predicates.cs  README.md  StringTable.cs
a-tree-master/RustVersion/: .gitattributes  Cargo.toml  LICENSE-MIT  README.md
a-tree-master/RustVersion/benches/data/: search.json
a-tree-master/RustVersion/examples/: search.rs
a-tree-master/RustVersion/src/: ast.rs  atree.rs  evaluation.rs  lexer.rs  lib.rs  strings.rs
a-tree-master/benches/: benchmarks.rs
a-tree-master/src/: error.rs  events.rs  grammar.lalrpop  parser.rs  predicates.rs  test_utils.rs
